--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,10 @@
             android:name=".services.GamingService"
             android:enabled="true" />
         <service
+            android:name=".services.FPSInfoService"
+            android:enabled="true"
+            android:exported="false" />
+        <service
             android:name=".services.DanmakuService"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
             <intent-filter>
